# rag-search-engine

./: .gitignore  Makefile  README.md  TEST_SUITE.md  config.yaml~example  debug_search.py  pyproject.toml  reindex.py  run_tests.sh  sqlite_vec_demo.py  test_controller.py
code_examples/: sqlite_vec_demo.py
scripts/: check_similarity.py  debug_search.py  print_ast.py  prove_threshold_hypothesis.py  reindex.py
src/rag_search_engine/core/: chunker.py  embedder.py  search_controller.py  store.py
src/rag_search_engine/web/: main.py
src/rag_search_engine/web/core/: config.py
src/rag_search_engine/web/templates/: index.html  search_results.html  sync_status.html
tests/: test_search_controller.py  test_store.py
tests/manual/: test_cascade.py  test_chunker.py  test_storage.py  test_trigger.py
